# hrana-client-rs

./: Cargo.toml
examples/: basic.rs  batch.rs
hrana-client-proto/: Cargo.toml
hrana-client-proto/src/: batch.rs  lib.rs  message.rs  pipeline.rs  serde_utils.rs  stmt.rs  value.rs
src/: client.rs  conn.rs  error.rs  handshake.rs  id_alloc.rs  lib.rs  op.rs  proto.rs  stream.rs
