[package]
name = "hrana-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs"] }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.18"
tokio-util = "0.7.4"
hyper = { version = "0.14.23", features = ["http2"] }
hyper-tungstenite = "0.9"
anyhow = "1.0.70"
serde = { version = "1.0.158", features = ["derive"] }
futures = "0.3.27"
base64 = "0.21.0"
serde_json = "1.0.94"

[[example]]
name = "basic"
path = "examples/basic.rs"
