[package]
name = "hrana-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
futures = "0.3.27"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.22.2", features = ["net", "sync", "rt", "macros"] }
tokio-tungstenite = "0.18"

[dev-dependencies]
tokio = { version = "1.22.2", features = ["rt-multi-thread"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
