[package]
name = "hrana-client"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Hrana client for libSQL and sqld"
keywords = ["libsql", "sqld", "database", "driver", "hrana"]
repository = "https://github.com/libsql/hrana-client-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
futures = "0.3.27"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.22.2", features = ["net", "sync", "rt", "macros"] }
tokio-tungstenite = "0.18"
hrana-client-proto = { version = "0", path = "./hrana-client-proto" }

[dev-dependencies]
tokio = { version = "1.22.2", features = ["rt-multi-thread"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[workspace]
members = ["hrana-client-proto"]
